@@ -1,6 +1,8 @@
 ﻿0.9.1
 -----
 1. Fix saving of 'Store covers in MPD dir' setting.
+2. Show/hide main window when KDE tray item clicked.
+3. Add 'Show Window' to tray item menu.
 
 0.9.0
 -----
